--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="personal_infor_set_nickName">昵称</string>
     <string name="personal_infor_set_name_edit">编辑</string>
     <string name="persoanl_infor_set_name_signature">个性签名</string>
-    <string name="personal_infor_set_personal_hobby">爱好:</string>
+    <string name="personal_infor_set_personal_hobby">爱好</string>
     <string name="personal_infor_set_fishing">钓鱼</string>
     <string name="personal_infor_set_watch_movie">电影</string>
     <string name="personal_infor_set_tourism">旅游</string>
