--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,9 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_register">Register</string>
     <string name="title_activity_waiting">Waiting</string>
-
+    <string name="register_account_please">请输入账号</string>
+    <string name="register_password_input">请输入密码</string>
+    <string name="register_password_second">确认入密码</string>
+    <string name="register_register">注册</string>
 
 </resources>
