2017/3/6本地音乐与主页结合提交

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,5 @@
     <string name="txt_hide_03">分享</string>
     <string name="txt_hide_04">歌曲信息</string>
     <string name="txt_hide_05">收藏</string>
-
+    <string name="delete_dialog_text">确定删除吗？</string>
 </resources>
